syntax = "proto3";
package grpc_service;

option go_package = "./grpc_service";

service Currency {
  rpc MakeExchange(ExchangeRequest) returns (ExchangeResponse);
}

message ExchangeRequest {
  string From = 1;
  string To = 2;
}

message ExchangeResponse {
  float Rate = 1;
}

enum Currencies {
  EUR=0;
  USD=1;
  JPY=2;
  BGN=3;
  CZK=4;
  DKK=5;
  GBP=6;
  HUF=7;
  PLN=8;
  RON=9;
  SEK=10;
  CHF=11;
  ISK=12;
  NOK=13;
  HRK=14;
  TRY=15;
  AUD=16;
  BRL=17;
  CAD=18;
  CNY=19;
  HKD=20;
  IDR=21;
  ILS=22;
  INR=23;
  KRW=24;
  MXN=25;
  MYR=26;
  NZD=27;
  PHP=28;
  SGD=29;
  THB=30;
  ZAR=31;
}
